Finish header design

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   
   * {
     font-family: 'Krub', sans-serif;
+    font-size: 20px;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -11,24 +12,31 @@
   }
   
   html, body {
-    /* width: 100vw;
-    height: 100vh; */
     overflow: hidden;
   }
   
+  ul {
+    list-style: none;
+  }
+
+  button{
+    appearance: none;
+  }
+
   .container {
     display: grid;
-    grid-template-columns: 200px 1fr;
+    grid-template-columns: 300px 1fr;
+    /* grid-template-rows: 1fr 4fr; */
   }
   
   .dashboard {
+    /* height: 100vh; */
     padding-top: calc(1em + 10px);
     padding-left: 10px;
     background-color: dodgerblue;
     color: #ffffff;
-    display: grid;
-    grid-column: 1;
-    grid-row: 1 / -1;
+    display: flex;
+    flex-direction: column;
   }
   
   .dashboard ul {
@@ -54,12 +62,12 @@
   
   h3{
     font-weight: 300;
-    font-size: 18px;
+    font-size: 20px;
   }
   
   h4{
     font-weight: 300;
-    font-size: 14px;
+    font-size: 17px;
     margin: 0;
   }
   
@@ -75,8 +83,8 @@
     padding-top: 1em;
     display: grid;
     grid-template-columns: 2fr 1fr;
-    /*grid-template-columns: 400px 200px;*/
-    grid-template-rows: 1fr 2fr;
+    /* grid-template-rows: 1fr 2fr; */
+    grid-template-rows: 50px 100px;
     align-items: start;
   }
   
@@ -85,6 +93,7 @@
     display: flex;
     flex: 1;
     align-items: center;
+    gap: 10px;
   }
   
   .search {
@@ -94,11 +103,18 @@
   
   .top-left > input {
     appearance: none;
-    height: 23px;
+    height: 30px;
     border: 1px solid var(--grey-accent);
     background-color:  var(--grey-accent);
     border-radius: 15px;
-    /*width: 80%; */
+    width: 80%;
+    padding: 0 7px;
+  }
+
+  .top-left > input:focus, .top-left > input:active {
+        box-shadow: 0 0 0 2pt #489aeb;
+        border-radius: 15px;
+        box-shadow: 1px 1px 10px rgb(167, 167, 167);
   }
   
   .header > .top-right {
@@ -106,7 +122,63 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    gap: 20px;
+  }
+
+  .header > .bottom-left {
+    padding: 10px;
+    display: flex;
+    flex: 1;
+    align-items: center;
     gap: 10px;
   }
-  
-  
+
+  /* .header > .icon {
+    width: 40px;
+    height: 40px;
+  }
+   */
+  .content {
+    grid-column: 2 / -1;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+
+  .content > .projects {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 100px repeat(3, 1fr);
+  }
+
+  .bottom-left{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+
+  .profile > .greeting {
+    font-size: 10px;
+  }
+
+  .profile-picture > .icon.profile{
+    width: 60px;
+    height: 60px;
+  }
+
+.bottom-right {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 10px;
+    gap: 25px;
+}
+
+.bottom-right > button {
+    font-size: 14px;
+    width: 5rem;
+    padding: 7px 15px;
+    border: 0;
+    border-radius: 15px;
+    background-color: #489aeb;
+    color: #ffffff;
+}
