--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@
   .header > .bottom.left {
     padding: 10px;
     display: flex;
-    flex: 1;
+    justify-content: flex-start;
     align-items: center;
     gap: 10px;
   }
@@ -226,13 +226,13 @@
     background: linear-gradient(90deg, #489aeb 2%, #ffffff 0);
 }
 
-.card .description {
+.description, .project {
     color: grey;
     font-weight: normal;
     font-size: 12px;
   }
   
-  .card .title {
+   .title, .user {
     font-size: 15px;
   }
 
@@ -265,16 +265,11 @@
 
 .announcements > ul,
 .trending > ul {
+    position: relative;
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-}
-
-.announcements > ul > li:not(:last-child),
-.trending > ul > li:not(:last-child) {
-    padding-bottom: 10px;
-    border-bottom: 1px solid black;
+    justify-content: space-around;
 }
 
 .anc-title{
@@ -285,4 +280,15 @@
 .anc-description {
     font-size: 12px;
     color:grey;
+}
+
+.trn {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.profile > img {
+    width: 30px;
+    height: 30px;
 }
