Add finishing style touchups

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
     appearance: none;
   }
 
+  button:hover{
+    cursor: pointer;
+  }
+
   .container {
     display: grid;
     grid-template-columns: 300px 1fr;
@@ -89,7 +93,14 @@
     grid-template-columns: 1fr 7fr;
     justify-items: start;
     align-items: start;
+    transition: transform .3s;
   }
+
+  .dashboard-content > li:hover {
+    cursor: pointer;
+    transform: scale(1.05);
+  }
+
   
   .header {
     padding-top: 1em;
@@ -122,7 +133,7 @@
     background-color:  var(--grey-accent);
     border-radius: 15px;
     width: 80%;
-    padding: 0 7px;
+    padding: 0 13px;
   }
 
   .top.left > input:focus, .top.left > input:active {
@@ -150,6 +161,10 @@
   .top.right > .icon {
     width: 30px;
     height: 30px;
+  }
+
+  .top.right > .icon:hover {
+    cursor: pointer;
   }
 
   .content {
@@ -224,6 +239,12 @@
     padding: 20px;
     border-radius: 10px;
     background: linear-gradient(90deg, #489aeb 2%, #ffffff 0);
+    transition: transform .3s;
+}
+
+.card:hover{
+    cursor: pointer;
+    transform: scale(1.03);
 }
 
 .description, .project {
@@ -234,6 +255,10 @@
   
    .title, .user {
     font-size: 15px;
+  }
+
+  .title{
+    margin-bottom: 5px;
   }
 
   .card-actions {
@@ -270,6 +295,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+
+.announcements > ul > li:hover,
+.trending > ul > li:hover {
+    cursor: pointer;
+
 }
 
 .anc-title{
