--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 :root{
-    --grey-accent: rgb(234, 237, 243);
+    --white: #ffffff;
+    --gray: #f0f0f0;
+    --darker-gray: #c7c7c7;
+    --darkest-gray: #aaaaaa;
+    --green: #60ce80;
+    --dark-blue: #154360;
   }
   
   * {
@@ -31,7 +36,7 @@
   .dashboard {
     padding-top: calc(1em + 10px);
     padding-left: 10px;
-    background-color: dodgerblue;
+    background-color: var(--dark-blue);
     color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -88,7 +93,7 @@
   }
 
   .dashboard-content > li {
-    margin: 7px 0;
+    margin: 9px 0;
     display: grid;
     grid-template-columns: 1fr 7fr;
     justify-items: start;
@@ -129,17 +134,19 @@
   .top.left > input {
     appearance: none;
     height: 30px;
-    border: 1px solid var(--grey-accent);
-    background-color:  var(--grey-accent);
+    border: 1px solid var(--dark-gray);
+    background-color:  var(--gray);
     border-radius: 15px;
     width: 80%;
     padding: 0 13px;
   }
 
   .top.left > input:focus, .top.left > input:active {
-        box-shadow: 0 0 0 2pt #489aeb;
+        outline: none;
+        border:1px solid var(--darker-gray);
+        /* box-shadow: 0 0 0 2pt red; */
         border-radius: 15px;
-        box-shadow: 1px 1px 10px rgb(167, 167, 167);
+        box-shadow: .5px .5px 2px var(--dark-gray);
   }
   
   .header > .top.right {
@@ -209,12 +216,12 @@
     padding: 7px 15px;
     border: 0;
     border-radius: 15px;
-    background-color: #489aeb;
-    color: #ffffff;
+    background-color: var(--green);
+    color:  var(--white);
 }
 
 .bottom{
-    box-shadow: 0 2px 2px -2px rgb(167, 167, 167);
+    box-shadow: 0 2px 2px -2px var(--darker-gray);
 }
 
 .content {
@@ -235,10 +242,10 @@
 }
 
 .card{
-    border: 1px solid black;
+    border: 1px solid var(--darkest-gray);
     padding: 20px;
     border-radius: 10px;
-    background: linear-gradient(90deg, #489aeb 2%, #ffffff 0);
+    background: linear-gradient(90deg, var(--green) 1.5%, var(--white) 0);
     transition: transform .3s;
 }
 
@@ -280,7 +287,7 @@
 }
 
 .announcements, .trending{
-    border: 1px solid grey;
+    border: 1px solid var(--darkest-gray);
     border-radius: 15px;
     padding: 10px 15px;
     font-size: 12px;
@@ -301,7 +308,6 @@
 .announcements > ul > li:hover,
 .trending > ul > li:hover {
     cursor: pointer;
-
 }
 
 .anc-title{
@@ -311,7 +317,7 @@
 
 .anc-description {
     font-size: 12px;
-    color:grey;
+    color:var(--darkest-gray);
 }
 
 .trn {
