--- a/style.css
+++ b/style.css
@@ -5,35 +5,48 @@
     --darkest-gray: #aaaaaa;
     --green: #60ce80;
     --dark-blue: #154360;
-  }
+}
   
-  * {
+* {
     font-family: 'Krub', sans-serif;
     font-size: 20px;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     
-  }
+}
   
-  ul {
+ul {
     list-style: none;
-  }
+}
 
-  button{
+button{
     appearance: none;
-  }
+}
 
-  button:hover{
+button:hover{
     cursor: pointer;
-  }
+    filter: brightness(108%);
+}
 
-  .container {
+.container {
     display: grid;
     grid-template-columns: 300px 1fr;
-  }
+}
+
+h3{
+    font-weight: 300;
+    font-size: 20px;
+}
   
-  .dashboard {
+h4{
+    font-weight: 300;
+    font-size: 17px;
+}
+
+/* *******LEFT SIDEBAR******* */
+
+.dashboard {
     padding-top: calc(1em + 10px);
     padding-left: 10px;
     background-color: var(--dark-blue);
@@ -42,72 +55,62 @@
     flex-direction: column;
     grid-column: 1;
     grid-row: 1 / -3;
-  }
-  
-  .dashboard ul {
+}
+
+.dashboard ul {
     margin-top: 15px;
     padding: 0;
     list-style: none;
     display: grid;
     grid-column: 1;
     grid-template-rows: repeat(5, 1fr) 2fr repeat(3, 1fr);
-  }
-  
-  .dashboard > div {
+}
+
+.dashboard > div {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-  }
-  
-  .icon{
+}
+
+.icon{
     width: 20px;
     height: 20px;
     margin: 0 7px;
-  }
-  
-  h3{
-    font-weight: 300;
-    font-size: 20px;
-  }
-  
-  h4{
-    font-weight: 300;
-    font-size: 17px;
-    margin: 0;
-  }
-  
-  .dashboard {
+}
+
+.dashboard {
     position: relative;
-  }
+}
 
-  .dashboard-content, .dashboard > div {
+.dashboard-content, .dashboard > div {
     position: fixed;
-  }
+}
 
-  .dashboard > div {
+.dashboard > div {
     top: 20px;
-  }
+}
 
-  .dashboard-content {
+.dashboard-content {
     top: 50px;
-  }
+}
 
-  .dashboard-content > li {
+.dashboard-content > li {
     margin: 9px 0;
     display: grid;
     grid-template-columns: 1fr 7fr;
     justify-items: start;
     align-items: start;
     transition: transform .3s;
-  }
+}
 
-  .dashboard-content > li:hover {
+.dashboard-content > li:hover {
     cursor: pointer;
     transform: scale(1.05);
-  }
+}
 
-  
-  .header {
+/* *******HEADER******* */
+
+.header {
     padding-top: 1em;
     height: 150px;
     display: grid;
@@ -115,23 +118,23 @@
     grid-template-rows: 1fr 2fr;
     align-items: start;
     grid-column: 2;
-  }
-  
-  .header > .top.left{
+}
+
+.header > .top.left{
     padding: 10px;
     display: flex;
     flex: 1;
     align-items: center;
     gap: 10px;
-  }
-  
-  .search {
+}
+
+.search {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
     font-size: 12px;
-  }
-  
-  .top.left > input {
+}
+
+.top.left > input {
     appearance: none;
     height: 30px;
     border: 1px solid var(--dark-gray);
@@ -139,66 +142,54 @@
     border-radius: 15px;
     width: 80%;
     padding: 0 13px;
-  }
+}
 
-  .top.left > input:focus, .top.left > input:active {
-        outline: none;
-        border:1px solid var(--darker-gray);
-        /* box-shadow: 0 0 0 2pt red; */
-        border-radius: 15px;
-        box-shadow: .5px .5px 2px var(--dark-gray);
-  }
-  
-  .header > .top.right {
+.top.left > input:focus, .top.left > input:active {
+    outline: none;
+    border:1px solid var(--darker-gray);
+    border-radius: 15px;
+    box-shadow: .5px .5px 2px var(--dark-gray);
+}
+
+.header > .top.right {
     padding: 10px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     gap: 20px;
-  }
+}
 
-  .header > .bottom.left {
+.header > .bottom.left {
     padding: 10px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     gap: 10px;
-  }
+}
 
-  .top.right > .icon {
+.top.right > .icon {
     width: 30px;
     height: 30px;
-  }
+}
 
-  .top.right > .icon:hover {
+.top.right > .icon:hover {
     cursor: pointer;
-  }
+}
 
-  .content {
-    grid-column: 2;
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-  }
-
-  .content > .projects {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 100px repeat(3, 1fr);
-  }
-
-  .bottom.left{
+.bottom.left{
     display: flex;
     align-items: center;
     justify-content: flex-start;
-  }
+}
 
-  .profile > .greeting {
+.profile > .greeting {
     font-size: 12px;
-  }
+}
 
-  .profile-picture > .icon.profile{
+.profile-picture > .icon.profile{
     width: 60px;
     height: 60px;
-  }
+}
 
 .bottom.right {
     height: 100%;
@@ -207,7 +198,6 @@
     justify-content: space-around;
     padding: 10px;
     gap: 25px;
-    
 }
 
 .bottom.right > button {
@@ -221,7 +211,20 @@
 }
 
 .bottom{
-    box-shadow: 0 2px 2px -2px var(--darker-gray);
+    box-shadow: 0 2px 2px -2px var(--darker-gray);    
+}
+
+/* *******MAIN CONTENT******* */
+
+.content {
+    grid-column: 2;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+.content > .projects {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 100px repeat(3, 1fr);
 }
 
 .content {
@@ -244,7 +247,7 @@
 .card{
     border: 1px solid var(--darkest-gray);
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 15px;
     background: linear-gradient(90deg, var(--green) 1.5%, var(--white) 0);
     transition: transform .3s;
 }
@@ -258,22 +261,23 @@
     color: grey;
     font-weight: normal;
     font-size: 12px;
-  }
-  
-   .title, .user {
-    font-size: 15px;
-  }
+}
 
-  .title{
+.title, .user {
+    font-size: 15px;    
+}
+
+.title{
     margin-bottom: 5px;
-  }
+}
 
-  .card-actions {
+.card-actions {
     margin-top: 20px;
     display: flex;
     justify-content: flex-end;
-  }
+}
 
+/* *******RIGHT SIDE COLUMN******* */
 .side{
     grid-column: 2 / 3;
     display: flex;
