--- a/style.css
+++ b/style.css
@@ -15,7 +15,12 @@
     padding: 0;
     
 }
-  
+
+a{
+    text-decoration: none;
+    color: #000000;
+}
+
 ul {
     list-style: none;
 }
@@ -50,7 +55,7 @@ h4{
     padding-top: calc(1em + 10px);
     padding-left: 10px;
     background-color: var(--dark-blue);
-    color: #ffffff;
+    color: var(--white);
     display: flex;
     flex-direction: column;
     grid-column: 1;
@@ -80,6 +85,22 @@ h4{
 
 .dashboard {
     position: relative;
+}
+
+.dashboard > span {
+    font-size: 12px;
+    color: var(--white);
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translate(-50%);
+    
+}
+
+.dashboard > span > a{
+    text-decoration: underline;
+    color: var(--white);
+    font-size: 12px;
 }
 
 .dashboard-content, .dashboard > div {
@@ -173,6 +194,11 @@ h4{
 }
 
 .top.right > .icon:hover {
+    cursor: pointer;
+}
+
+
+.top.right > span:hover{
     cursor: pointer;
 }
 
